<resources>
    <!--Tittle-->
    <string name="app_name">Elib</string>
    <string name="Elibrary">E-library</string>
    <string name="Moto">Reserve! Read! Repeat!</string>


    <!--For Form-->
    <string name="Username">User Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="pass">Password</string>
    <string name="crpass">Create Password</string>
    <string name="cpass">Confirm Password</string>
    <string name="frgp">Forgot Password?</string>
    <string name="logbtn">Login</string>
    <string name="signbtn">Signup</string>
    <string name="next">Next</string>
    <string name="termscons">Terms and Conditions</string>


    <!--for Buttons-->
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="button">View as Guest</string>
    <string name="seebooks">See Books</string>


    <!--Navigation-->
    <string name="title_activity_home_page">home_page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sekhar Khanal</string>
    <string name="nav_header_subtitle">sekharkhanal15@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <!--Error Message-->
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="todo">TODO</string>

    <!--Headinga-->
    <string name="heading1">Books We Provide</string>

    <!--Faculty-->
    <string name="science">Science</string>
    <string name="Management">Management</string>
    <string name="Diploma">Diploma</string>
    <string name="_5dp">5dp</string>
    <string name="already_have_account">Already have account?</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_ui">MainUI</string>
    <string name="show_password">Show Password</string>
    <string name="otp">OTP</string>
    <string name="didn_t_received_code">Didn\'t received code?</string>
    <string name="send_again">Send Again</string>
    <string name="con">Continue</string>
    <string name="NOTE">OTP is sent to</string>
    <string name="code">Code</string>
    <string name="home">HOME</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="sem">Sem</string>
    <string name="book">Book</string>
    <string name="publication">Publication</string>
    <string name="status">Status</string>
    <string name="select">Select</string>
    <string name="clas">Class</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="dashboard">Dashboard</string>
    <string name="useremail_gmail_com">useremail@gmail.com</string>
    <string name="user_name">User Name</string>
    <string name="reserve">Reserve</string>
    <string name="borrowed_books">Borrowed Books</string>
    <string name="history">History</string>
    <string name="returned_books">Returned Books</string>
</resources>
