<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item android:title="@string/dashboard">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home"
                    android:title="@string/home"
                    android:icon="@drawable/home_icon"/>
                <item
                    android:id="@+id/nav_settings"
                    android:title="@string/settings"
                    android:icon="@drawable/setting_icon"/>
            </group>
        </menu>
    </item>
    <item android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_about"
                    android:title="@string/about"
                    android:icon="@drawable/about_icon"/>
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout"
                    android:icon="@drawable/logout_icon"/>
            </group>
        </menu>
    </item>
</menu>