<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    android:orientation="vertical"
    tools:context=".science">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/nav_bar">

        <ImageView
            android:id="@+id/backbtn"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            app:srcCompat="@drawable/baseline_keyboard_backspace_24" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/science"
            android:textColor="@color/white"
            android:textSize="23sp" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/science_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:stretchColumns="1,2,3,4,5">

                <TableRow
                    android:layout_width="match_parent"
                    android:background="@color/boxbd"
                    android:gravity="center"
                    android:paddingVertical="10dp">

                    <TextView
                        android:id="@+id/SEM"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingHorizontal="10dp"
                        android:text="@string/clas"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/Name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingHorizontal="10dp"
                        android:text="@string/book"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/Pub"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingHorizontal="10dp"
                        android:text="@string/publication"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/stat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingHorizontal="10dp"
                        android:text="@string/status"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/select"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingHorizontal="10dp"
                        android:text="@string/select"
                        android:textColor="@color/white" />

                </TableRow>


            </TableLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:background="@drawable/table">

                <TextView
                    android:id="@+id/resbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:background="@drawable/button"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="7dp"
                    android:text="@string/reserve"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</LinearLayout>