<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/img"
    tools:context=".Signin">

    <LinearLayout
        android:id="@+id/linearColumn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/wrapper"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/Username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="@color/white"
                    app:hintTextColor="@color/white"
                    app:placeholderTextColor="@color/white">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inusername"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/formtxt"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="@color/white"
                    app:hintTextColor="@color/white"
                    app:placeholderTextColor="@color/white">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inphone"
                        android:inputType="phone"
                        android:textColor="@color/formtxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    app:hintTextColor="@color/white"
                    app:placeholderTextColor="@color/white">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inaddress"
                        android:inputType="textPostalAddress"
                        android:textColor="@color/formtxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
                <RadioButton
                    android:id="@+id/tcbtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contextClickable="true"
                    android:text="@string/termscons"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/Nextbtn"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/btncolor"
                    android:text="@string/next"
                    android:textColor="@color/white"
                    app:cornerRadius="10dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="13.6dp"
                        android:text="@string/already_have_account"
                        android:textColor="@color/gray"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/navlog"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:paddingStart="5dp"
                        android:textColor="@color/btncolor" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:visibility="gone"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>