<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/img"
    tools:context=".Login"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearColumn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/wrapper"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/email"
                    android:textColorHint="@color/white"
                    app:hintTextColor="@color/white"
                    app:placeholderTextColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inemail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:scrollbarTrackVertical="@null"
                        android:textColor="@color/formtxt" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColorHint="@color/white"
                    app:hintTextColor="@color/white"
                    android:orientation="horizontal"
                    app:placeholderTextColor="@color/white">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inpassword"
                        android:inputType="textPassword"
                        android:textColor="@color/formtxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbarTrackVertical="@null">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="clip_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/forgetpass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/frgp"
                        android:textColor="@color/btncolor" />

                    <CheckBox
                        android:id="@+id/showpass"
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contextClickable="true"
                        android:text="@string/show_password"
                        android:textColor="@color/formtxt" />

                </LinearLayout>

                <Button
                    android:id="@+id/loginbtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/btncolor"
                    android:text="@string/logbtn"
                    android:textColor="@color/white"
                    app:cornerRadius="10dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="13.6dp"
                        android:text="@string/don_t_have_account"
                        android:textColor="@color/gray"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/navsign"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="5dp"
                        android:text="@string/signup"
                        android:textColor="@color/btncolor" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:visibility="gone"
            />
    </RelativeLayout>

</LinearLayout>