<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    android:orientation="vertical"
    tools:context=".diploma">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/nav_bar">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="RtlSymmetry">

            <ViewFlipper
                android:layout_width="30dp"
                android:layout_height="35dp"
                android:background="@drawable/baseline_menu_24" />

            <!--                <ImageView-->
            <!--                    android:id="@+id/imageView2"-->
            <!--                    android:layout_width="45dp"-->
            <!--                    android:layout_height="45dp"-->
            <!--                    android:layout_marginStart="10dp"-->
            <!--                    app:srcCompat="@mipmap/lightlogo" />-->
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Diploma"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_marginVertical="5dp"
            android:background="@color/white" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp">

            <TableLayout
                android:id="@+id/diploma_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:stretchColumns="1,2,3,4,5">

                <TableRow
                    android:layout_width="match_parent"
                    android:background="@color/boxbd"
                    android:gravity="center"
                    android:paddingVertical="5dp">

                    <TextView
                        android:id="@+id/SEM"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingHorizontal="10dp"
                        android:text="@string/sem"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/Name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingHorizontal="10dp"
                        android:text="@string/book"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/Pub"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingHorizontal="10dp"
                        android:text="@string/publication"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/stat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingHorizontal="10dp"
                        android:text="@string/status"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/select"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingHorizontal="10dp"
                        android:text="@string/select"
                        android:textColor="@color/white" />

                </TableRow>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </TableLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>