<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/img"
    tools:context=".OTP"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearColumn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/wrapper"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:text="@string/otp"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/NOTE"
                        android:layout_marginRight="5dp"
                        android:textColor="@color/gray"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/mess"
                        android:textSize="12sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray" />

                </LinearLayout>




                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/code"
                    android:orientation="horizontal"
                    android:textColorHint="@color/white"
                    app:hintTextColor="@color/white"
                    app:placeholderTextColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inotp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberPassword"
                        android:scrollbarTrackVertical="@null"
                        android:textColor="@color/formtxt" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/conbtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/btncolor"
                    android:text="@string/con"
                    android:textColor="@color/white"
                    app:cornerRadius="10dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="13.6dp"
                        android:text="@string/didn_t_received_code"
                        android:textColor="@color/gray"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/resendbtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="5dp"
                        android:textColor="@color/btncolor" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:visibility="gone"
            />
    </RelativeLayout>

</LinearLayout>